--- a/AnimePages.html
+++ b/AnimePages.html
@@ -328,7 +328,7 @@
 
                                 <div class="col-12 px-0 py-1 text-justify">
                                     <div class="bg-primary text-white text-center rounded-corner border score mb-1">
-                                        Anime and Subtittle Link
+                                        Anime and Subtitle Link
                                     </div>
                                     </a>
 
@@ -339,62 +339,110 @@
                                                 <div class="row">
                                                     <p class="col-12 mt-4">Google Drive</p>
 
-                                                    <table class="table table-sm tableBottom infoAnime table-bordered ">
-                                                        <tbody>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 1</a></td>
-                                                                <td><a href="">Subtitle only Episode 1</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 2</a></td>
-                                                                <td><a href="">Subtitle only Episode 2</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 3</a></td>
-                                                                <td><a href="">Subtitle only Episode 3</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 4</a></td>
-                                                                <td><a href="">Subtitle only Episode 4</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 5</a></td>
-                                                                <td><a href="">Subtitle only Episode 5</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 6</a></td>
-                                                                <td><a href="">Subtitle only Episode 6</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 7</a></td>
-                                                                <td><a href="">Subtitle only Episode 7</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 8</a></td>
-                                                                <td><a href="">Subtitle only Episode 8</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 9</a></td>
-                                                                <td><a href="">Subtitle only Episode 9</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 10</a></td>
-                                                                <td><a href="">Subtitle only Episode 10</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 11</a></td>
-                                                                <td><a href="">Subtitle only Episode 11</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 12</a></td>
-                                                                <td><a href="">Subtitle only Episode 12</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td><a href="">Kimi No Nawa Episode 13</a></td>
-                                                                <td><a href="">Subtitle only Episode 13</a></td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
+                                                    <div class="col-12 col-md-6">
+                                                        <table
+                                                            class="table table-sm tableBottom infoAnime table-bordered ">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th scope="col">Anime Download Link</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 1</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 2</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 3</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 4</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 5</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 6</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 7</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 8</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 9</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 10</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 11</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 12</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 13</a></td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+
+                                                    <div class="col-12 col-md-6">
+                                                        <table
+                                                            class="table table-sm tableBottom infoAnime table-bordered ">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th scope="col">Subtitle only</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 1</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 2</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 3</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 4</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 5</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 6</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 7</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 8</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 9</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 10</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 11</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 12</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 13</a></td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+
                                                 </div>
 
                                             </div>
@@ -413,7 +461,7 @@
                             </a>
                         </div>
                         <!-- #Iklan Box -->
-                        
+
                     </div>
 
 
