--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="col-12 col-lg-9 mb-4">
 
         <!-- #SlideShow-->
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" ">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" >
           <ol class=" carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -135,15 +135,15 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="img/banner_fp_logo_banner.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-md-block">
-                <h5 class="h5carousel">Selamat Datang di SeraYu Fansub</h5>
+              <div class="carousel-caption d-md-block smCaption">
+                <h5 class="h5carousel">Selamat Datang di SeraYu Fansub Website Anime 60 FPS</h5>
                 <p class="pcarousel">Terima kasih telah mengunjungi website kami. Nikmati anime kesukaan mu dalam 60 fps
                 </p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/banner_fp_under contructioon.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-md-block">
+              <div class="carousel-caption d-md-block smCaption">
                 <h5 class="h5carousel">Website Masih Dalam Tahap Beta</h5>
                 <p class="pcarousel">ini merupakan website baru kami, mohon maaf bila kalian menemukan bug yang
                   mengganggu.
@@ -154,7 +154,7 @@
             </div>
             <div class="carousel-item">
               <img src="img/banner_fp_support.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-md-block">
+              <div class="carousel-caption d-md-block smCaption">
                 <h5 class="h5carousel">Tolong Support Kami</h5>
                 <p class="pcarousel">Support kalian merupakan hal terpenting bagi kami. Share website ini ke teman
                   kalian dan social media
