--- a/dmca.html
+++ b/dmca.html
@@ -161,56 +161,91 @@
 
                     <h1>DMCA</h1>
                     <header>
-                      <p>Release on March 6th, 2021</p>
+                      <p>Release on March 7th, 2021</p>
                     </header>
                     <div>
-                      <p>If you have reason to believe that
-                        one of our content is violating your copyrights or some of Search Results references to
-                        illegal contents, please send a email for us.<br>
-                        Please allow up to a 1-7 business days
-                        for an email response. Note that emailing your complaint to other parties such as our
-                        Internet Service Provider, Hosting Provider, and other third party will not expedite your
-                        request and may result in a delayed response due to the complaint not being filed
-                        properly.
+                      <p>If you have reason to believe that one of our content is violating your copyrights or some of
+                        Search Results references to illegal contents, please send a email for us.<br>
+                        Please allow up to a 1-7 business days for an email response. Note that emailing your complaint
+                        to other parties such as our Internet Service Provider, Hosting Provider, and other third party
+                        will not expedite your request and may result in a delayed response due to the complaint not
+                        being filed properly.
                       </p>
                       <h2>Required information :</h2>
                       <h3>Please note that we deal only with
                         messages that meet the following requirements:</h3>
                       <ul>
-                        <li>Please Provide us with your name,
-                          address and telephone number. We reserve the right to verify this information.</li>
+                        <li>Send your Claim to serayufansub@gmail.com</li>
                         <li>Explain which copyrighted material
                           is affected.</li>
-                        <li>Please provide the exact and
-                          complete to the url link.</li>
-                        <li>If it a case of files with illegal
-                          contents, please describe the contents briefly in two or three points.</li>
-                        <li>Please ensure that you can receive
-                          further enquiries from us at the e-mail address you are writing from.</li>
-                        <li>Please write to us only in
-                          English.</li>
+                        <li>The Claim must be written in English language, it must be understandable and in polite form
+                        </li>
+                        <li>The Claim must be sent from a company mail, Claims sent from free service emails like AOL,
+                          Yahoo Gmail, etc. will be rejected</li>
+                        <li>You must present an evidence that shows that you are the copyright holder or that you are
+                          acting on behalf of the copyright holder</li>
+                        <li>You must present an evidence that shows that the content is legally copyrighted and that you
+                          are the copyright holder</li>
+                        <li>The materials that need to be removed must be provided in form of material name and DIRECT
+                          links to each publication. We don’t accept links to search queries, categories, tags or
+                          subcategories or media pages.</li>
+                        <li>Provide sufficient contact information with a valid email address.</li>
                       </ul>
+                      <h2>Good Copyright Claim example:</h2>
+                      <p>This is a notice in accordance with the Online Copyright Infringement Liability Limitation Act
+                        (OCILLA) a part of the Digital Millennium Copyright Act of 1998 requesting the service providers
+                        to be held strictly liable for the acts of their users & immediately cease the access to
+                        copyrighted material.</p>
+                      <p>We have found an infringing material in your website which indeed is our movie ‘The Movie’
+                        released worldwide on December 12th, 2021.</p>
+                      <p>The material that is claimed to be infringing is to be removed or access to which is to be
+                        disabled immediately and avoid the growth of piracy.</p>
+                      <p>Below are the URL for your reference:</p>
+                      <ul>
+                        <li>DIRECT Publication link 1</li>
+                        <li>DIRECT Publication link 2</li>
+                      </ul>
+                      <p>
+                        We have good faith & belief that the use of the described material in the manner complained of
+                        is not authorized by the copyright owner, its agent, or the law.</p>
+                      <p>The information in the notification is accurate, and under penalty of perjury, that the
+                        complaining party is authorized to act on behalf of the owner of an exclusive right that is
+                        allegedly infringed.</p>
+                      <p>We hereby declare that the information in the notification is accurate to the best of our
+                        knowledge & belief.</p>
+                      <p>Authorization letter of the copyright owner (or person/company representing): Link to the
+                        letter <br>
+                        A document proving that the matherials are copyrighted and belong to owner (or person/company
+                        representing): Link to the document <br>
+                        Digital signature for copyright claim: Full info including address, phone, email and website.
+                        <br>
+                        Copyright owners: Full info including address, phone, email and website.
+                      </p>
                       <h2>Notice:</h2>
                       <ul>
-                        <li>Anonymous or incomplete messages
-                          will not be deal with it. Thank you for your understanding.</li>
-                        <li>We don’t Rip or Pirate Animes
-                          , this site all the Animes, Download Links, other resources are reproduced from others
-                          Public forums , blogs , others websites.</li>
+                        <li>Anonymous or incomplete messages will not be deal with it. Thank you for your understanding.
+                        </li>
+                        <li>We don’t Rip or Pirate Animes & this site all the Animes, Download Links, other resources
+                          are reproduced from others Public forums & blogs & others websites.</li>
                       </ul>
 
                       <h2>DISCLAIMER:</h2>
-                      <p>None of the files listed in this
-                        website are hosted on the server of Https://http://serayufs.my.id/ all point to content hosted
-                        on
-                        third party websites. Https://http://serayufs.my.id/ does not accept responsibility for content
-                        hosted on third party websites and does not have any involvement in the
-                        downloading/uploading of movies . we just post links available in internet. If you think any
-                        of the contents of this site infringes any intellectual property law and you hold the
-                        copyright of that content please report it to serayufansub@gmail.com the content will be
-                        immediately removed.</p>
+                      <ul>
+                        <li>None of the files listed in this website are hosted on the server of Https://serayufs.my.id/
+                          all point to content hosted on third party websites. </li>
+                        <li>Https://serayufs.my.id/ does not accept responsibility for content hosted on third party
+                          websites and does not have any involvement in the downloading/uploading of movies. we just
+                          post links available in internet. </li>
+                        <li>If you think any of the contents of this site infringes any intellectual property law and
+                          you hold the copyright of that content please report it to serayufansub@gmail.com the content
+                          will be immediately removed.</li>
+                      </ul>
+                      <p>And the last thing you need to know is that after your request we will remove publication only
+                        from our website. We can’t remove file from other websites hosting it, even if the file has our
+                        name on it or in its description.</p>
                       <p>Thank you.</p>
                       <p>Admin</p>
+                      <p>Contact Email: serayufansub@gmail.com</p>
                     </div>
 
 
